--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
 </head>
@@ -52,7 +51,7 @@
                 <span class="icon">🔄</span><span class="label">Fisse</span>
             </button>
             <button class="nav-item" onclick="Router.navigate('accounts')">
-                <span class="icon">💳</span><span class="label">Conti</span>
+                <span class="icon">💎</span><span class="label">Patrimonio</span>
             </button>
         </nav>
     </div>
